@@ -6,8 +6,9 @@ import lombok.experimental.UtilityClass;
 import org.bukkit.Material;
 
 import java.io.File;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashSet;
-import java.util.List;
 import java.util.Set;
 
 @UtilityClass
@@ -21,12 +22,12 @@ public class Constants {
     public final ItemBuilder ARROW_ITEM = new ItemBuilder(Material.ARROW);
     public final ItemBuilder NETHER_STAR = new ItemBuilder(Material.NETHER_STAR);
 
-    public final Set<String> EMBEDDED_LANGUAGES = new HashSet<>(List.of("translations\\ar.yml", "translations\\bn.yml", "translations\\da.yml", "translations\\de.yml",
+    public final Set<String> EMBEDDED_LANGUAGES = new HashSet<>(Arrays.asList("translations\\ar.yml", "translations\\bn.yml", "translations\\da.yml", "translations\\de.yml",
             "translations\\en.yml", "translations\\eo.yml", "translations\\es.yml", "translations\\fr.yml", "translations\\hi.yml", "translations\\id.yml",
             "translations\\id.yml", "translations\\ja.yml", "translations\\nl.yml", "translations\\no.yml", "translations\\pt.yml", "translations\\ru.yml",
             "translations\\sv.yml", "translations\\ua.yml", "translations\\zh.yml"));
     public final Set<String> SUPPORTED_LANGUAGES = new HashSet<>();
-    public final Set<String> FILES = new HashSet<>(List.of("config.yml"));
+    public final Set<String> FILES = new HashSet<>(Collections.singletonList("config.yml"));
     static {
         File[] files = new File(FastPluginConfigurer.getInstance().getDataFolder(), "translations").listFiles();
         if (files != null) {
